objects/Fee__c.object
<CustomObject>
    <description>This object records types of fees</description>
    <fields>
        <fullName>Default_Amount__c</fullName>
        <description>Default Amount of a Fee. If nothing is indicated on the Assigned Fee object, this is taken.</description>
        <label>Default Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Max_Allowable_Fees__c</fullName>
        <description>The maximum amount of fees that ACV could charge to a client.</description>
        <inlineHelpText>The maximum amount of fees that ACV could charge to a client.</inlineHelpText>
        <label>Max Allowable Fees</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Type__c</fullName>
        <description>The type of fee this categorizes in</description>
        <label>Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Buyer Fee</fullName>
                </value>
                <value>
                    <fullName>Seller Fee</fullName>
                </value>
                <value>
                    <fullName>Internal Fee</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>Fee</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Fee Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Fees</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>